hero full fix, header subsite add mode jump nav bug fix

--- a/frontend/src/scss/components/_hero.scss
+++ b/frontend/src/scss/components/_hero.scss
@@ -63,6 +63,10 @@
             left: 40px;
             width: 50%;
         }
+
+        @include respond-to(full) {
+            left: calc((100vw - 1680px) / 2);
+        }
     }
 
     &__title {
